# StegTool

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  StegTool  StegTool.py  stegtool  test.sh
include/: binary.h  bool.h  compression.h  createSteg.h  destroySteg.h  encryption.h  fileType.h  genericSteg.h  image.h  readArgs.h  readJPG.h  readPNG.h  verbose.h
src/: binary.c  compression.c  createSteg.c  destroySteg.c  encryption.c  fileType.c  genericSteg.c  image.c  main.c  readArgs.c  readJPG.c  readPNG.c  verbose.c
